added a file to support spin buttons

--- a/examples/datepicker/datepicker-spinbuttons.html
+++ b/examples/datepicker/datepicker-spinbuttons.html
@@ -26,7 +26,7 @@
     </ul>
   </nav>
   <main>
-    <h1>Date Picker Example Using Menu Button</h1>
+    <h1>Date Picker Example Using Spin Buttons</h1>
     <p>
       <strong>NOTE:</strong> This example page is work in progress.
       Please provide feedback in
