--- a/examples/datepicker/datepicker-spinbuttons.html
+++ b/examples/datepicker/datepicker-spinbuttons.html
@@ -13,7 +13,8 @@
 <script src="../js/highlight.pack.js"></script>
 <script src="../js/app.js"></script>
 
-<link href="css/spinbutton.css" rel="stylesheet">
+<link href="css/datepicker-spinbuttons.css" rel="stylesheet">
+<script src="js/spinbutton-date.js" type="text/javascript"></script>
 <script src="js/datepicker-spinbuttons.js" type="text/javascript"></script>
 </head>
 <body>
@@ -42,49 +43,55 @@
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
     <div id="example">
 
-      <div id="myDatepicker"
-           class="datepicker">
+      <div class="datepicker-spinbuttons"
+           role="group"
+           aria-labelledby="myDatepickerLabel">
 
-        <div  class="month spinbutton"
-              role="spinbutton"
-              tabindex="0"
-              aria-valuenow="11"
-              aria-valuetext="January"
-              aria-valuemin="1"
-              aria-valuemax="12"
-              aria-label="Month">
-          <span class="value">January</span>
-          <span class="increase">
-            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12">
-              <polygon class="increase" fill="#333" points="0,12 11,12 6,2"></polygon>
-            </svg>
-          </span>
-          <span class="decrease">
-            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12">
-              <polygon class="decrease" fill="#333" points="0,2 11,2 6,12"></polygon>
-            </svg>
-          </span>
-        </div>
+           <h3 id="myDatepickerLabel">Date</h3>
 
         <div  class="day spinbutton"
               role="spinbutton"
               tabindex="0"
               aria-valuenow="1"
-              aria-valuetext="1st"
               aria-valuemin="1"
               aria-valuemax="31"
               aria-label="Day">
-          <span class="value">1st</span>
-          <span class="increase">
-            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12">
-              <polygon class="increase" fill="#333" points="0,12 11,12 6,2"></polygon>
+          <div class="decrease">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+                <polygon points="2,18 18,18 10,4"></polygon>
             </svg>
-          </span>
-          <span class="decrease">
-            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12">
-              <polygon class="decrease" fill="#333" points="0,2 11,2 6,12"></polygon>
+          </div>
+          <div class="previous">30</div>
+          <div class="value">1</div>
+          <div class="next">2</div>
+          <div class="increase">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+              <polygon points="2,4 18,4 10,18"></polygon>
             </svg>
-          </span>
+          </div>
+        </div>
+
+        <div  class="month spinbutton"
+              role="spinbutton"
+              tabindex="0"
+              aria-valuenow="11"
+              aria-valuetext="June"
+              aria-valuemin="1"
+              aria-valuemax="12"
+              aria-label="Month">
+          <div class="decrease">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+                <polygon points="2,18 18,18 10,4"></polygon>
+            </svg>
+          </div>
+          <div class="previous">May</div>
+          <div class="value">June</div>
+          <div class="next">July</div>
+          <div class="increase">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+              <polygon points="2,4 18,4 10,18"></polygon>
+            </svg>
+          </div>
         </div>
 
         <div  class="year spinbutton"
@@ -94,17 +101,19 @@
               aria-valuemin="2019"
               aria-valuemax="2040"
               aria-label="Year">
-          <span class="value">2019</span>
-          <span class="increase">
-            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12">
-              <polygon class="increase" fill="#333" points="0,12 11,12 6,2"></polygon>
+          <div class="decrease">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+                <polygon class="decrease" points="2,18 18,18 10,4"></polygon>
             </svg>
-          </span>
-          <span class="decrease">
-            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12">
-              <polygon class="decrease" fill="#333" points="0,2 11,2 6,12"></polygon>
+          </div>
+          <div class="previous">2018</div>
+          <div class="value">2019</div>
+          <div class="next">2020</div>
+          <div class="increase">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+              <polygon points="2,4 18,4 10,18"></polygon>
             </svg>
-          </span>
+          </div>
         </div>
       </div>
     </div>
@@ -115,17 +124,17 @@
     <h2>Accessibility Features</h2>
     <p>There are three main featues of the spin button date picker example:</p>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>Day, month and year are separate spin buttons</li>
+      <li>The increase and decrease events are the <code>div</code> element containing the impages of the up and odwn arrows, making the effective target area larger for changing the value of a spin button.</li>
+      <li>Focusing a spin button increases the size of the increase and decrease bttons to make the element with focus easier to find and to track focus changes.</li>
     </ul>
   </section>
   <section>
     <h2 id="kbd_label">Keyboard Support</h2>
 
     <section>
-      <h3 id="kbd_label_7">Spin Button (Font Size)</h3>
-      <p>The spin button for changing font size provides the following keyboard support described in the <a href="../../#spinbutton">spin button design pattern.</a></p>
+      <h3 id="kbd_label_7">Spin Button (Day, Month and Year)</h3>
+      <p>The spin button for changing the day, month and year provides the following keyboard support described in the <a href="../../#spinbutton">spin button design pattern.</a></p>
       <table aria-labelledby="kbd_label_7 kbd_label" class="def">
         <thead>
           <tr>
@@ -134,21 +143,29 @@
           </tr>
         </thead>
         <tbody>
-          <tr data-test-id="toolbar-spinbutton-down-arrow">
+          <tr data-test-id="spinbutton-down-arrow">
             <th><kbd>Down Arrow</kbd></th>
-            <td>Decreases the font size of the text in the <code>textarea</code> by 1 point.</td>
+            <td>Decreases the spin button value by 1 item.</td>
           </tr>
-          <tr data-test-id="toolbar-spinbutton-up-arrow">
+          <tr data-test-id="spinbutton-up-arrow">
             <th><kbd>Up Arrow</kbd></th>
-            <td>Increases the font size of the text in the <code>textarea</code> by 1 point.</td>
+            <td>Increases the spin button value by 1 item.</td>
           </tr>
-          <tr data-test-id="toolbar-spinbutton-page-down">
+          <tr data-test-id="spinbutton-page-down">
             <th><kbd>Page Down</kbd></th>
-            <td>Decreases the font size of the text in the <code>textarea</code> by 5 points.</td>
+            <td>Decreases the spin button value by 5 items.</td>
           </tr>
-          <tr data-test-id="toolbar-spinbutton-page-up">
+          <tr data-test-id="spinbutton-page-up">
             <th><kbd>Page Up</kbd></th>
-            <td>Increases the font size of the text in the <code>textarea</code> by 5 points.</td>
+            <td>Increases the spin button value by 5 items.</td>
+          </tr>
+          <tr data-test-id="spinbutton-end">
+            <th><kbd>End</kbd></th>
+            <td>Set spin button value to maximum value.</td>
+          </tr>
+          <tr data-test-id="spinbutton-home">
+            <th><kbd>Home</kbd></th>
+            <td>Set spin button value to mimimum value.</td>
           </tr>
         </tbody>
       </table>
@@ -161,8 +178,8 @@
 
 
     <section>
-      <h3 id="rps_label_7">Spin Button (Font Size)</h3>
-      <p>The spin button for changing font size implements the following ARIA attributes described in the <a href="../../#spinbutton">spin button design pattern.</a></p>
+      <h3 id="rps_label_7">Spin Button (Day, Month and Year)</h3>
+      <p>The spin button for changing day, month and year use the following ARIA attributes described in the <a href="../../#spinbutton">spin button design pattern.</a></p>
       <table aria-labelledby="rps_label_7 rps_label" class="data attributes">
         <thead>
           <tr>
@@ -173,38 +190,59 @@
           </tr>
         </thead>
         <tbody>
-          <tr data-test-id="toolbar-spinbutton-role">
-            <th scope="row"><code>spinbutton</code></th>
+          <tr data-test-id="group-role">
+            <th scope="row"><code>group</code></th>
             <td></td>
-            <td><code>div</code></td>
-            <td>Identifies the <code>div</code> element as a <code>spinbutton</code>.</td>
-          </tr>
-          <tr data-test-id="toolbar-spinbutton-aria-label">
-            <td></td>
-            <th scope="row"><code>aria-label="Font size in points"</code></th>
-            <td><code>div</code></td>
-            <td>Defines the accessible name for the spin button as &quot;Font size in points&quot;.</td>
-          </tr>
-          <tr data-test-id="toolbar-spinbutton-aria-valuenow">
-            <td></td>
-            <th scope="row"><code>aria-valuenow="NUMBER_POINTS"</code></th>
             <td><code>div</code></td>
             <td>
               <ul>
-                <li>Indicates the current value of the spin button.</li>
-                <li>Updated by JavaScript as users adjust the value of the spin button.</li>
+                <li>Identifies the group of spin buttons for defining a date.</li>
+                <li>The accessible name comes from the <code>aria-labelledby</code> attribute.</li>
               </ul>
             </td>
           </tr>
-          <tr data-test-id="toolbar-spinbutton-aria-valuetext">
+          <tr data-test-id="group-aria-labelledby">
             <td></td>
-            <th scope="row"><code>aria-valuetext="NUMBER_POINTS Points"</code></th>
+            <th scope="row"><code>aria-labelledy="<em>IDREF</em>"</code></th>
+            <td><code>div</code></td>
+            <td>The IDREF identifies the element with the visible text defining the accessible name for the group of spin buttons, i.e. "Date".</td>
+          </tr>
+          <tr data-test-id="spinbutton-role">
+            <th scope="row"><code>spinbutton</code></th>
+            <td></td>
             <td><code>div</code></td>
             <td>
               <ul>
-                <li>Provides a more user friendly announcement of the current value for screen reader users.</li>
-                <li><code>NUMBER_POINTS</code> is updated by JavaScript as the user adjusts the value of the spin button.</li>
-                <li>As users adjust the value, instead of hearing only a number, they will hear the current value followed by the word <q>Points</q>, e.g., <q>10 Points</q>.
+                <li>Identifies the <code>div</code> element as a <code>spinbutton</code>.</li>
+                <li>The accessible name comes from the <code>aria-label</code> attribute.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr data-test-id="spinbutton-aria-label">
+            <td></td>
+            <th scope="row"><code>aria-label="<em>name</em>"</code></th>
+            <td><code>div</code></td>
+            <td>Defines the accessible name for each spin button (e.g. <q>day</q>, <q>month</q> and <q>year</q>).</td>
+          </tr>
+          <tr data-test-id="spinbutton-aria-valuenow">
+            <td></td>
+            <th scope="row"><code>aria-valuenow="<em>number</em>"</code></th>
+            <td><code>div</code></td>
+            <td>
+              <ul>
+                <li>Indicates the current numeric value of the spin button.</li>
+                <li>Updated by JavaScript as users change the value of the spin button.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr data-test-id="spinbutton-aria-valuetext">
+            <td></td>
+            <th scope="row"><code>aria-valuetext="<em>month</em>"</code></th>
+            <td><code>div</code></td>
+            <td>
+              <ul>
+                <li>For the month spin button provides a more user friendly announcement of the current month for screen reader users.</li>
+                <li>As users adjust the value, instead of hearing only a number, they will hear the current month.</li>
               </ul>
             </td>
           </tr>
@@ -212,13 +250,18 @@
             <td></td>
             <th scope="row"><code>aria-valuemin="8"</code></th>
             <td><code>div</code></td>
-            <td>Indicates the minimum allowed value for the spin button, i.e., smallest supported font size.</td>
+            <td>Indicates the minimum allowed value for the spin button.</td>
           </tr>
           <tr data-test-id="toolbar-spinbutton-aria-valuemax">
             <td></td>
             <th scope="row"><code>aria-valuemax="40"</code></th>
             <td><code>div</code></td>
-            <td>Indicates the maximum allowed value for the spin button, i.e., largest supported font size.</td>
+            <td>
+              <ul>
+                <li>Indicates the maximum allowed value for the spin button.</li>
+                <li>For the spin button for days, the maximum value is updated to reflect the number of days in the current month.</li>
+              </ul>
+            </td>
           </tr>
         </tbody>
       </table>
@@ -230,11 +273,14 @@
     <ul>
       <li>
         CSS:
-        <a href="css/spinbutton.css" type="text/css">spinbutton.css</a>
+        <a href="css/datepicker-spinbuttons.css" type="text/css">datepicker-spinbuttons.css</a>
       </li>
       <li>
         Javascript:
-        <a href="js/datepicker-spinbutton.js" type="text/javascript">datepicker-spinbutton.js</a>
+        <ul>
+          <li><a href="js/datepicker-spinbuttons.js" type="text/javascript">datepicker-spinbuttons.js</a></li>
+          <li><a href="js/spinbutton-date.js" type="text/javascript">spinbutton-date.js</a></li>
+        </ul>
       </li>
     </ul>
   </section>
