--- a/examples/carousel/carousel-1.html
+++ b/examples/carousel/carousel-1.html
@@ -52,7 +52,7 @@
       </p>
 
       <section>
-        <h2>Rendering Options</h2>
+        <h2>View Options</h2>
         <ul>
           <li><a href="carousel-1.html">Carousel controls and captions over image</a>, this option is not as accessible since the controls are more difficult to find and the captions are more difficult to read when they are over the rotating images.</li>
           <li><a href="carousel-1.html?moreaccessible">Carousel controls and captions above and below the image</a>, this option is the preferred method since the controls are easier to find and the captions are easier to read.</li>
@@ -283,6 +283,8 @@
         </ul>
 
         <h3>Color Contrast of Text and Rotation Controls</h3>
+
+        <p>In the view with the controls and captions on top of the image a major issue is color contrast with the controls and text with the image in the background.  The following was implemented for this view to meet WCAG 2.1 color contrast requirements:</p>
 
         <ul>
           <li>
