--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4148,14 +4148,14 @@ However, most authors do not need detailed understanding of the algorithms since
             This column may include one of the following values:
             <ul>
               <li>
-                Required <strong>ONLY IF</strong> Content Insufficient: An element with this role is named by its descendant content.
+                Required <strong>Only If</strong> Content Insufficient: An element with this role is named by its descendant content.
                 If <code>aria-label</code> or <code>aria-labelledby</code> is applied, content contained in the element and its descendants is hidden from assistive technology users unless it is also referenced by <code>aria-labelledby</code>.
                 Avoid hiding descendant content except in the rare circumstances where doing so benefits assistive technology users.
               </li>
               <li>Required: The ARIA specification requires authors to provide a name; a missing name triggers accessibility validators to flag a violation.</li>
               <li>Recommended: Providing a name is strongly recommended.</li>
               <li>Discretionary: Naming is either optional or, in the circumstances described in the guidance column, is discouraged.</li>
-              <li>DO NOT NAME:< Naming is strongly discouraged even if it is technically permitted; often assistive technologies do not render a name even if provided.</li>
+              <li>Do Not Name: Naming is strongly discouraged even if it is technically permitted; often assistive technologies do not render a name even if provided.</li>
             </ul>
           </dd>
           <dt>Guidance:</dt>
@@ -4210,7 +4210,7 @@ However, most authors do not need detailed understanding of the algorithms since
             </tr>
             <tr>
               <td><a href="#button" class="role-reference"><code>button</code></a></td>
-              <td>Required <strong>ONLY IF</strong> Content Insufficient</td>
+              <td>Required <strong>Only If</strong> Content Insufficient</td>
               <td>
                 <ul>
                   <li>Warning! Using <code>aria-label</code> or <code>aria-labelledby</code> will hide descendant content from assistive technologies.</li>
@@ -4220,7 +4220,7 @@ However, most authors do not need detailed understanding of the algorithms since
             </tr>
             <tr>
               <td><a href="#cell" class="role-reference"><code>cell</code></a></td>
-              <td>Required <strong>ONLY IF</strong> Content Insufficient</td>
+              <td>Required <strong>Only If</strong> Content Insufficient</td>
               <td>
                 <ul>
                   <li>Warning! Using <code>aria-label</code> or <code>aria-labelledby</code> will hide descendant content from assistive technologies.</li>
@@ -4231,7 +4231,7 @@ However, most authors do not need detailed understanding of the algorithms since
             </tr>
             <tr>
               <td><a href="#checkbox" class="role-reference"><code>checkbox</code></a></td>
-              <td>Required <strong>ONLY IF</strong> Content Insufficient</td>
+              <td>Required <strong>Only If</strong> Content Insufficient</td>
               <td>
                 <ul>
                   <li>Warning! Using <code>aria-label</code> or <code>aria-labelledby</code> will hide any descendant content from assistive technologies.</li>
@@ -4242,7 +4242,7 @@ However, most authors do not need detailed understanding of the algorithms since
             </tr>
             <tr>
               <td><a href="#columnheader" class="role-reference"><code>columnheader</code></a></td>
-              <td>Required <strong>ONLY IF</strong> Content Insufficient</td>
+              <td>Required <strong>Only If</strong> Content Insufficient</td>
               <td>
                 <ul>
                   <li>Warning! Using <code>aria-label</code> or <code>aria-labelledby</code> will hide descendant content from assistive technologies.</li>
@@ -4325,7 +4325,7 @@ However, most authors do not need detailed understanding of the algorithms since
             </tr>
             <tr>
               <td><a href="#gridcell" class="role-reference"><code>gridcell</code></a></td>
-              <td>Required <strong>ONLY IF</strong> Content Insufficient</td>
+              <td>Required <strong>Only If</strong> Content Insufficient</td>
               <td>To-do: write guidance similar to cell</td>
             </tr>
             <tr>
@@ -4335,7 +4335,7 @@ However, most authors do not need detailed understanding of the algorithms since
             </tr>
             <tr>
               <td><a href="#heading" class="role-reference"><code>heading</code></a></td>
-              <td>Required <strong>ONLY IF</strong> Content Insufficient</td>
+              <td>Required <strong>Only If</strong> Content Insufficient</td>
               <td>
                 <ul>
                   <li>Warning! Using <code>aria-label</code> or <code>aria-labelledby</code> will hide descendant content from assistive technologies.</li>
@@ -4350,7 +4350,7 @@ However, most authors do not need detailed understanding of the algorithms since
             </tr>
             <tr>
               <td><a href="#link" class="role-reference"><code>link</code></a></td>
-              <td>Required <strong>ONLY IF</strong> Content Insufficient</td>
+              <td>Required <strong>Only If</strong> Content Insufficient</td>
               <td>
                 <ul>
                   <li>Warning! Using <code>aria-label</code> or <code>aria-labelledby</code> will hide descendant content from assistive technologies.</li>
@@ -4431,18 +4431,18 @@ However, most authors do not need detailed understanding of the algorithms since
             </tr>
             <tr>
               <td><a href="#menuitem" class="role-reference"><code>menuitem</code></a></td>
-              <td>Required <strong>ONLY IF</strong> Content Insufficient</td>
+              <td>Required <strong>Only If</strong> Content Insufficient</td>
               <td>
               </td>
             </tr>
             <tr>
               <td><a href="#menuitemcheckbox" class="role-reference"><code>menuitemcheckbox</code></a></td>
-              <td>Required <strong>ONLY IF</strong> Content Insufficient</td>
+              <td>Required <strong>Only If</strong> Content Insufficient</td>
               <td>guidance</td>
             </tr>
             <tr>
               <td><a href="#menuitemradio" class="role-reference"><code>menuitemradio</code></a></td>
-              <td>Required <strong>ONLY IF</strong> Content Insufficient</td>
+              <td>Required <strong>Only If</strong> Content Insufficient</td>
               <td>guidance</td>
             </tr>
             <tr>
@@ -4462,7 +4462,7 @@ However, most authors do not need detailed understanding of the algorithms since
             </tr>
             <tr>
               <td><a href="#option" class="role-reference"><code>option</code></a></td>
-              <td>Required <strong>ONLY IF</strong> Content Insufficient</td>
+              <td>Required <strong>Only If</strong> Content Insufficient</td>
               <td>guidance</td>
             </tr>
             <tr>
@@ -4477,7 +4477,7 @@ However, most authors do not need detailed understanding of the algorithms since
             </tr>
             <tr>
               <td><a href="#radio" class="role-reference"><code>radio</code></a></td>
-              <td>Required <strong>ONLY IF</strong> Content Insufficient</td>
+              <td>Required <strong>Only If</strong> Content Insufficient</td>
               <td>guidance</td>
             </tr>
             <tr>
@@ -4493,7 +4493,7 @@ However, most authors do not need detailed understanding of the algorithms since
             <tr>
               <td><a href="#row" class="role-reference"><code>row</code></a></td>
               <td>
-                Required <strong>ONLY IF</strong> Content Insufficient
+                Required <strong>Only If</strong> Content Insufficient
                 <strong>AND</strong> descendant of a <code>treegrid</code>
                 <strong>AND</strong> the row is focusable.
               </td>
@@ -4510,7 +4510,7 @@ However, most authors do not need detailed understanding of the algorithms since
             </tr>
             <tr>
               <td><a href="#rowheader" class="role-reference"><code>rowheader</code></a></td>
-              <td>Required <strong>ONLY IF</strong> Content Insufficient</td>
+              <td>Required <strong>Only If</strong> Content Insufficient</td>
               <td>To-do: similar to columnheader</td>
             </tr>
             <tr>
@@ -4550,12 +4550,12 @@ However, most authors do not need detailed understanding of the algorithms since
             </tr>
             <tr>
               <td><a href="#switch" class="role-reference"><code>switch</code></a></td>
-              <td>Required <strong>ONLY IF</strong> Content Insufficient</td>
+              <td>Required <strong>Only If</strong> Content Insufficient</td>
               <td>To-do: similar to checkbox</td>
             </tr>
             <tr>
               <td><a href="#tab" class="role-reference"><code>tab</code></a></td>
-              <td>Required <strong>ONLY IF</strong> Content Insufficient</td>
+              <td>Required <strong>Only If</strong> Content Insufficient</td>
               <td>To-do: similar to button</td>
             </tr>
             <tr>
@@ -4595,7 +4595,7 @@ However, most authors do not need detailed understanding of the algorithms since
             </tr>
             <tr>
               <td><a href="#tooltip" class="role-reference"><code>tooltip</code></a></td>
-              <td>Required <strong>ONLY IF</strong> Content Insufficient</td>
+              <td>Required <strong>Only If</strong> Content Insufficient</td>
               <td>To-do: similar to alert</td>
             </tr>
             <tr>
@@ -4610,7 +4610,7 @@ However, most authors do not need detailed understanding of the algorithms since
             </tr>
             <tr>
               <td><a href="#treeitem" class="role-reference"><code>treeitem</code></a></td>
-              <td>Required <strong>ONLY IF</strong> Content Insufficient</td>
+              <td>Required <strong>Only If</strong> Content Insufficient</td>
               <td>To-do: similar to menuitem</td>
             </tr>
         </table>
