Recommendations for definition and term roles

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4285,8 +4285,8 @@ However, most authors do not need detailed understanding of the algorithms since
             </tr>
             <tr>
               <td><a href="#definition" class="role-reference"><code>definition</code></a></td>
-              <td>To-do: look up requirement</td>
-              <td>To-do: write guidance</td>
+              <td>Recommended</td>
+              <td>Reference the term being defined with <code>role="term"</code>, using <code>aria-labelledby</code>.</td>
             </tr>
             <tr>
               <td><a href="#dialog" class="role-reference"><code>dialog</code></a></td>
@@ -4575,8 +4575,8 @@ However, most authors do not need detailed understanding of the algorithms since
             </tr>
             <tr>
               <td><a href="#term" class="role-reference"><code>term</code></a></td>
-              <td>namerequired</td>
-              <td>guidance</td>
+              <td>Do Not Name</td>
+              <td>Since a term is usually the name for the <code>role="definition"</code> element, it could be confusing if the term itself also has a name.</td>
             </tr>
             <tr>
               <td><a href="#textbox" class="role-reference"><code>textbox</code></a></td>
