Recommendations for feed, form, navigation

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4311,7 +4311,11 @@ However, most authors do not need detailed understanding of the algorithms since
             <tr>
               <td><a href="#feed" class="role-reference"><code>feed</code></a></td>
               <td>Recommended</td>
-              <td>To-do: similar to navigation</td>
+                <ul>
+                  <li>Helps screen reader users understand the context and purpose of the feed.</li>
+                  <li>Use <code>aria-labelledby</code> if a visible title is present, otherwise use <code>aria-label</code>.</li>
+                  <li>See the <a href="#feed">Feed Design Pattern</a>.</li>
+                </ul>
             </tr>
             <tr>
               <td><a href="#figure" class="role-reference"><code>figure</code></a></td>
@@ -4321,7 +4325,11 @@ However, most authors do not need detailed understanding of the algorithms since
             <tr>
               <td><a href="#form" class="role-reference"><code>form</code></a></td>
               <td>Recommended</td>
-              <td>To-do: write guidance, probably similar to navigation</td>
+                <ul>
+                  <li>Helps screen reader users understand the context and purpose of the form landmark.</li>
+                  <li>Use <code>aria-labelledby</code> if a visible title is present, otherwise use <code>aria-label</code>.</li>
+                  <li>See the <a href="#aria_lh_form">Form Design Pattern</a>.</li>
+                </ul>
             </tr>
             <tr>
               <td><a href="#grid" class="role-reference"><code>grid</code></a></td>
@@ -4453,7 +4461,13 @@ However, most authors do not need detailed understanding of the algorithms since
             <tr>
               <td><a href="#navigation" class="role-reference"><code>navigation</code></a></td>
               <td>Recommended</td>
-              <td>guidance</td>
+              <td>
+                <ul>
+                  <li>Helps screen reader users understand the context and purpose of the navigation landmark.</li>
+                  <li>Use <code>aria-labelledby</code> if a visible title is present, otherwise use <code>aria-label</code>.</li>
+                  <li>See the <a href="#aria_lh_navigation">Navigation Design Pattern</a>.</li>
+                </ul>
+              </td>
             </tr>
             <tr>
               <td><a href="#none"><code>none</code></a></td>
