Fix markup typo

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4174,7 +4174,7 @@ However, most authors do not need detailed understanding of the algorithms since
               <td>Discretionary</td>
               <td>
                 Some screen readers announce the name of an alert before announcing the content of the alert.
-                Thus, <code>aria-label</</code> provides a method for prefacing the visible content of an alert with text that is not displayed as part of the alert.
+                Thus, <code>aria-label</code> provides a method for prefacing the visible content of an alert with text that is not displayed as part of the alert.
                 Using <code>aria-label</code> is functionally equivalent to providing off-screen text in the contents of the alert, except off-screen text would be announced by screen readers that do not support <code>aria-label</code> on <code>alert</code> elements.
               </td>
             </tr>
