Fix a ReSpec link error

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4480,7 +4480,7 @@ However, most authors do not need detailed understanding of the algorithms since
               </td>
             </tr>
             <tr>
-              <td><a href="#none"><code>none</code></a></td>
+              <td><a href="#none" class="role-reference"><code>none</code></a></td>
               <td>Do Not Name</td>
               <td></td>
             </tr>
