Recommendation for none/presentation

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4482,7 +4482,7 @@ However, most authors do not need detailed understanding of the algorithms since
             <tr>
               <td><a href="#none" class="role-reference"><code>none</code></a></td>
               <td>Do Not Name</td>
-              <td></td>
+              <td>An element with <code>role="none"</code> is not part of the accessibility tree (except in error cases). Do not use <code>aria-labelledby</code> or <code>aria-label</code>.</td>
             </tr>
             <tr>
               <td><a href="#note" class="role-reference"><code>note</code></a></td>
@@ -4497,7 +4497,7 @@ However, most authors do not need detailed understanding of the algorithms since
             <tr>
               <td><a href="#presentation" class="role-reference"><code>presentation</code></a></td>
               <td>Do Not Name</td>
-              <td>To-do: same as none</td>
+              <td>An element with <code>role="presentation"</code> is not part of the accessibility tree (except in error cases). Do not use <code>aria-labelledby</code> or <code>aria-label</code>.</td>
             </tr>
             <tr>
               <td><a href="#progressbar" class="role-reference"><code>progressbar</code></a></td>
