--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4660,7 +4660,12 @@ However, most authors do not need detailed understanding of the algorithms since
             <tr>
               <td><a href="#tooltip" class="role-reference"><code>tooltip</code></a></td>
               <td>Required <strong>Only If</strong> Content Insufficient</td>
-              <td>To-do: similar to alert</td>
+              <td>
+                <ul>
+                  <li>Warning! Using <code>aria-label</code> or <code>aria-labelledby</code> will hide descendant content from assistive technologies.</li>
+                  <li>Ideally named by visible, descendant content.</li>
+                </ul>
+              </td>
             </tr>
             <tr>
               <td><a href="#tree" class="role-reference"><code>tree</code></a></td>
