Link to dialog pattern and date picker project

--- a/examples/dialog-nonmodal/datepicker-dialog.html
+++ b/examples/dialog-nonmodal/datepicker-dialog.html
@@ -23,7 +23,7 @@
     <ul>
       <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
       <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
-      <li><a href="https://github.com/w3c/aria-practices/projects/14">Related Issues</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/projects/27">Related Issues</a></li>
       <li><a href="../../#dialog-modal">Design Pattern</a></li>
     </ul>
   </nav>
@@ -772,7 +772,7 @@
   </section>
   </main>
   <nav>
-    <a href="../../#datepicker">Date Picker Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+    <a href="../../#dialog-modal">Dialog Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
   </nav>
 </body>
 </html>
