update title and note for menu wording, add links to pattern

--- a/examples/disclosure/disclosure-faq.html
+++ b/examples/disclosure/disclosure-faq.html
@@ -38,6 +38,9 @@
     <li>
       <a href="disclosure-img-long-description.html">Example Disclosure (Show/Hide) for an Image Description</a>
     </li>
+    <li>
+      <a href="disclosure-navigation.html">Disclosure Pattern for Navigation Menus</a>
+    </li>
   </ul>
   <section>
     <h2 id="ex_label">Example</h2>
