--- a/examples/disclosure/disclosure-navigation.html
+++ b/examples/disclosure/disclosure-navigation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Disclosure Navigation Example | WAI-ARIA Authoring
+<title>Disclosure Pattern for Navigation Menu Example | WAI-ARIA Authoring
   Practices 1.1</title>
 
   <!--  Core js and css shared by all examples; do not modify when using this template. -->
@@ -27,12 +27,13 @@
     </ul>
   </nav>
   <main>
-  <h1>Example Disclosure (Show/Hide) for Navigation</h1>
+  <h1>Disclosure Pattern for Navigation Menus</h1>
   <p>
     The following example demonstrates using the
     <a href="../../#disclosure">disclosure design pattern</a>
     to create a dropdown navigation bar.
   </p>
+  <p>Note: although this pattern uses the word "menu" in the colloquial sense to refer to a set of navigation links, it does not use a menu role.</p>
   <p>Similar examples include:</p>
   <ul>
     <li><a href="disclosure-faq.html">Example Disclosure (Show/Hide) for Answers to Frequently Asked Questions</a></li>
